[package]
name = "cant_wait_for_bsn"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
thiserror = { workspace = true }
cant_wait_for_bsn_macros = { path = "macros", version = "0.1.0" }
downcast-rs = "1.2.0"

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
