[package]
name = "cant_wait_for_bsn_parse"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_utils = { version = "0.15" }
bevy_math = { version = "0.15" }
thiserror = "2"
proc-macro2 = { version = "1.0", default-features = false, features = [
    "span-locations",
] }
syn = { version = "2.0", default-features = false, features = [
    "parsing",
    "printing",
    "clone-impls",
    "full",
    "visit",
    "extra-traits",
] }
